# Argos

./: .clangd  .gitignore  CMakeLists.txt  U8G2_HAL_ESP32_EXPLANATION.md  partitions.csv  readme.md  readme_zh.md
components/: readme.md
components/ESP-DDC/: CMakeLists.txt
components/ESP-DDC/include/: ESP-DDC.hpp  ddc.hpp
components/ESP-DDC/include/devices/: ddc_encoder.hpp
components/ESP-DDC/include/devices/display/: ddc_ssd1322_u8g2.hpp  ssd1322.hpp  ssd1322_u8g2.hpp
components/ESP-DDC/include/devices/display/UI/: Argos_icon.hpp  Argos_u8g2.hpp  Hermes.hpp  Hermes_icon.hpp  Hermes_u8g2.hpp  ddc_animation.hpp  ddc_argos_icon.hpp  ddc_argos_u8g2.hpp  readme.md
components/ESP-DDC/include/general/: ddc_io.hpp  ddc_spi.hpp  ddc_spi_device.hpp
components/ESP-DDC/include/network/: ddc_dns_server.hpp  ddc_http.hpp  ddc_http_client.hpp  ddc_http_server.hpp  ddc_sntp.hpp  ddc_wifi.hpp  example.c
components/ESP-DDC/include/utility/: ddc_littlefs.hpp
docs/: TODO.md
lib/i4N/DDC/: ddc_io.hpp  ddc_sample.hpp
linux/: server.py
main/: CMakeLists.txt  input.cpp  input.hpp  main.cpp  main.hpp  network.cpp  network.hpp  ui.cpp  ui.hpp  ui_framework.cpp  ui_framework.hpp
